--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
 </head>
 <body>
-        <!-- Header Section -->
+        <!-- Header Section testing in github -->
     <header class="header">
         <!-- Top Contact Bar -->
         <div class="top-bar bg-dark py-2">
